--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,6 @@ jobs:
             libasound2-dev                                              \
             libbullet-dev                                               \
             libgnutls28-dev                                             \
-            mesa-common-dev                                             \
             libgl-dev                                                   \
             libopenxr-dev                                               \
             libqscintilla2-qt5-dev                                      \
@@ -105,4 +104,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Get-deps
         run: |
+          apt get update && apt get upgrade && apt install mesa-common-dev
           cd engine && make makelibs FTE_TARGET=win64 && make m-rel plugins-rel FTE_TARGET=win64 NATIVE_PLUGINS="openssl ezhud" -j8
